Changed Html quote formatting

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -25,10 +25,44 @@
       <p>ALBERT CAMUS</p>
 
       <div>
-        <h1><a href="">Here #3</a></h1>
-        <p>About once or twice every month I engage in public debates with those whose pressing need it is to woo and to win the approval of supernatural beings. Very often, when I give my view that there is no supernatural dimension, and certainly not one that is only or especially available to the faithful, and that the natural world is wonderful enough—and even miraculous enough if you insist—I attract pitying looks and anxious questions. How, in that case, I am asked, do I find meaning and purpose in life? How does a mere and gross materialist, with no expectation of a life to come, decide what, if anything, is worth caring about?
-
-Depending on my mood, I sometimes but not always refrain from pointing out what a breathtakingly insulting and patronizing question this is. (It is on a par with the equally subtle inquiry: Since you don't believe in our god, what stops you from stealing and lying and raping and killing to your heart's content?) Just as the answer to the latter question is: self-respect and the desire for the respect of others—while in the meantime it is precisely those who think they have divine permission who are truly capable of any atrocity—so the answer to the first question falls into two parts. A life that partakes even a little of friendship, love, irony, humor, parenthood, literature, and music, and the chance to take part in battles for the liberation of others cannot be called 'meaningless' except if the person living it is also an existentialist and elects to call it so. It could be that all existence is a pointless joke, but it is not in fact possible to live one's everyday life as if this were so. Whereas if one sought to define meaninglessness and futility, the idea that a human life should be expended in the guilty, fearful, self-obsessed propitiation of supernatural nonentities… but there, there. Enough.</p>
+        <h2><a href="">Here #3</a></h2>
+        <p>About once or twice every month I engage in public debates
+           with those whose pressing need it is to woo and to win
+           the approval of supernatural beings. Very often,
+           when I give my view that there is no supernatural dimension,
+           and certainly not one that is only or especially available to
+           the faithful, and that the natural world is wonderful enough—and
+           even miraculous enough if you insist—I attract pitying looks and
+           anxious questions. </p>
+          <p>How, in that case, I am asked, do I find meaning and purpose
+            in life? How does a mere and gross materialist, with no
+            expectation of a life to come, decide what, if anything,
+            is worth caring about?</p>
+            <p>Depending on my mood, I sometimes but not always refrain
+              from pointing out what a breathtakingly insulting
+              and patronizing question this is. (It is on a par with the
+              equally subtle inquiry: Since you don't believe in our god,
+              what stops you from stealing and lying and raping and killing
+              to your heart's content?)</p>
+            <p>Just as the answer to the latter question is:
+              self-respect and the desire for the respect of
+              others—while in the meantime it is precisely those who
+              think they have divine permission who are truly capable
+               of any atrocity—so the answer to the first question falls
+               into two parts.</p>
+               <p>A life that partakes even a little of
+                friendship, love, irony, humor, parenthood, literature,
+                and music, and the chance to take part in battles for the
+                liberation of others cannot be called 'meaningless' except
+                if the person living it is also an existentialist and elects
+                to call it so.</p>
+                <p>It could be that all existence is a pointless
+                joke, but it is not in fact possible to live one's everyday
+                life as if this were so. Whereas if one sought to define
+                meaninglessness and futility, the idea that a human life
+                should be expended in the guilty, fearful, self-obsessed
+                propitiation of supernatural nonentities… but there, there.
+                Enough.</p>
         <p>CHRISTOPHER HITCHENS (Hitch-22)</p>
       </div>
 
